Package: wyntonquery
====================

Version: 0.0.0-9001 [2019-06-06]

BUG FIXES:

 * cpu_info() did not handle upper-case letters in field names.
 

Version: 0.0.0-9000 [2018-06-10]

NEW FEATURES:

 * Add host_table().
 
 * Add round_ram().
 
 * Add lscpu().
 
 * Add system_info().
 
 * Add disk_free().
 
 * Add queues().

 * Add on_hostname().
 
 * Add qhost() and cpu_info().