@@ -1,0 +1,3 @@
+trim <- function(s) {
+  sub("[\t\n\f\r ]+$", "", sub("^[\t\n\f\r ]+", "", s))
+}
